# zentral-workspace

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
documents/: README.md
src-python/: README.md  agent_load_tester.py  db_inspector.py  ipc_event_simulator.py  mock_claude_cli.py  requirements.txt  stream_validator.py  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_workflow_runs.sql
src-tauri/src/: lib.rs  main.rs  persistence.rs
src-tauri/src/agent/: manager.rs  mod.rs  secretary.rs  skill_pool.rs  spawner.rs  types.rs
src-tauri/src/automation/: knowledge_injector.rs  mod.rs  scheduler.rs  workflow_runner.rs
src-tauri/src/commands/: agent.rs  auth.rs  chat.rs  config.rs  history.rs  knowledge.rs  migration.rs  mod.rs  project.rs  schedule.rs  session.rs  skill.rs  telegram.rs  terminal.rs  workflow.rs
src-tauri/src/config/: mod.rs
src-tauri/src/mcp/: jsonrpc.rs  mod.rs  transport.rs
src-tauri/src/mcp/resources/: mod.rs  providers.rs
src-tauri/src/mcp/tools/: agents.rs  chat.rs  history.rs  knowledge.rs  mod.rs  projects.rs  schedules.rs  skills.rs  workflows.rs
src-tauri/src/persistence/: agents.rs  chat.rs  history.rs  knowledge.rs  migrations.rs  mod.rs  models.rs  projects.rs  schedules.rs  settings.rs  skills.rs  tests.rs  workflow_runs.rs  workflows.rs
src-tauri/src/process/: pty.rs
src-tauri/src/project/: workspace.rs
src-tauri/src/telegram/: bot.rs
(+152 files in other folders)
