[package]
name = "zentral"
version = "0.1.0"
description = "Claude Multi-Agent Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "zentral_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
dirs = "6"
